--- a/frontend_vue/package.json
+++ b/frontend_vue/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
+    "@vue/cli-plugin-router": "^4.3.1",
     "@vue/cli-service": "~4.3.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
