--- a/frontend_vue/package.json
+++ b/frontend_vue/package.json
@@ -15,6 +15,8 @@
     "vuex": "^3.3.0"
   },
   "devDependencies": {
+    "@mdi/font": "^5.1.45",
+    "@mdi/js": "^5.1.45",
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-router": "^4.3.1",
     "@vue/cli-service": "~4.3.0",
