--- a/frontend_vue/package.json
+++ b/frontend_vue/package.json
@@ -15,6 +15,7 @@
     "vuex": "^3.3.0"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "@mdi/font": "^5.1.45",
     "@mdi/js": "^5.1.45",
     "@vue/cli-plugin-babel": "~4.3.0",
