--- a/frontend_vue/package.json
+++ b/frontend_vue/package.json
@@ -11,15 +11,15 @@
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
-    "vuetify": "^2.2.11",
-    "vuex": "^3.3.0"
+    "vuetify": "^2.2.28",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.13.0",
-    "@mdi/font": "^5.1.45",
-    "@mdi/js": "^5.1.45",
+    "@mdi/font": "^5.2.45",
+    "@mdi/js": "^5.2.45",
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-router": "^4.3.1",
+    "@vue/cli-plugin-vuex": "^4.3.1",
     "@vue/cli-service": "~4.3.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
