--- a/frontend_vue/package.json
+++ b/frontend_vue/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vue-videobg": "^2.0.0",
     "vuetify": "^2.2.28",
     "vuex": "^3.4.0"
   },
