reproductor video and recursive function

--- a/frontend_vue/package.json
+++ b/frontend_vue/package.json
@@ -9,7 +9,12 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "plyr": "^3.6.2",
+    "tiptap-vuetify": "^1.7.0",
+    "v-markdown-editor": "^1.2.5",
     "vue": "^2.6.11",
+    "vue-plyr": "^6.0.4",
+    "vue-responsive-video-background-player": "^1.1.0",
     "vue-router": "^3.1.6",
     "vue-videobg": "^2.0.0",
     "vuetify": "^2.2.28",
