--- a/frontend_vue/package.json
+++ b/frontend_vue/package.json
@@ -9,14 +9,17 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "firebase": "^7.14.4",
     "plyr": "^3.6.2",
     "tiptap-vuetify": "^1.7.0",
+    "toastr": "^2.1.4",
     "v-markdown-editor": "^1.2.5",
     "vue": "^2.6.11",
     "vue-plyr": "^6.0.4",
     "vue-responsive-video-background-player": "^1.1.0",
     "vue-router": "^3.1.6",
     "vue-videobg": "^2.0.0",
+    "vuefire": "^2.2.2",
     "vuetify": "^2.2.28",
     "vuex": "^3.4.0"
   },
@@ -29,6 +32,7 @@
     "@vue/cli-service": "~4.3.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
+    "vue-cli-plugin-vuefire": "^1.0.2",
     "vue-cli-plugin-vuetify": "^2.0.5",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.3.0"
