--- a/frontend_vue/package.json
+++ b/frontend_vue/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "firebase": "^7.14.4",
+    "jquery": "^3.5.1",
     "plyr": "^3.6.2",
     "toastr": "^2.1.4",
     "vue": "^2.6.11",
