--- a/frontend_vue/package.json
+++ b/frontend_vue/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@zoomus/websdk": "^1.7.8",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "firebase": "^7.14.4",
